# onrecord-chi-mayor-2027

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add-media.yml
.github/workflows/: backfill.yml  cron.yml  deploy.yml  discovery-check.yml  feed-probe.yml  intake.yml  review.yml  test.yml
data/: ledger.json
data/backfill/: phase1.json  phase2.json
data/registry/: candidates.json  config.json  sources.json  topics.json
data/transcripts/: 2026-07-08-wbez-org-mayor-johnson-to-introduce-measure-to-protect-chicago-renters.md
docs/: architecture-review-2026-07-15.md  backfill-plan.md  discovery-expansion-plan.md  gemini-transcription-eval-log.md  gemini-youtube-transcription-research.md  security-note-subagent-injection.md
evals/gemini_transcription/: README.md  clips.json  run_eval.py
pipeline/: __main__.py  backfill.py  bluesky.py  citations.py  config.py  data_integrity.py  discover.py  extract.py  ingest.py  llm.py  propose.py  review.py  run.py  schemas.py  transcribe.py
schemas/: candidates.schema.json  config.schema.json  evidence.schema.json  sources.schema.json  stance.schema.json  statement.schema.json  topics.schema.json
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_backfill.py  test_bluesky.py  test_citations.py  test_cli.py  test_config.py  test_data_integrity.py  test_discover.py  test_extract.py  test_ingest.py  test_live.py  test_llm.py  test_propose.py  test_review.py  test_run.py  test_schemas.py  test_transcribe.py
tests/fixtures/: article.html  bluesky_feed.json  (+3 more)
(+58 files in other folders)
