[project]
name = "housing-tracker-pipeline"
version = "0.1.0"
description = "Discovery + extraction pipeline for the Chicago Mayoral Candidate Housing Tracker"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "jsonschema>=4.21",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit real external APIs (OpenRouter/Groq/yt-dlp); run manually with -m live",
]
addopts = "-m 'not live'"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
